# git-squad

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: release-plz.yml  test-and-build.yaml
assets/: demo.tape
src/: alias.rs  buddy.rs  cli.rs  config.rs  git.rs  main.rs
tests/: integration_test.rs  test_active.rs  test_alone.rs  test_create.rs  test_forget.rs  test_info.rs  test_list.rs  test_with.rs  test_without.rs
tests/common/: mod.rs
