[package]
name = "git-squad"
version = "0.2.0"
edition = "2024"
description = "Manage co-authors in git commit messages with ease"
authors = ["Alexander Pankoff <ccntrq@screenri.de>"]
repository = "https://github.com/ccntrq/git-squad"
license = "MIT"
keywords = ["cli", "git", "pair-programming", "productivity"]
categories =  ["command-line-utilities", "development-tools"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "REAMDE.md",
    "CHANGELOG.md",
    "LICENSE",
]


[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
dirs = "6.0"
regex = "1.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.19"
test-case = "3.3"

[lints.clippy]
all = "warn"
pedantic = "warn"
